fix: hellobar z-index

--- a/app/css/polykit-v0-4.css
+++ b/app/css/polykit-v0-4.css
@@ -2347,11 +2347,7 @@ div.mailchimp-form-container div.mc-field-group label, div.mailchimp-form-contai
   margin-right: auto;
 }
 
-body.docs-theme {
-  /*   * {
-      color: inherit;
-  } */
-}
+
 body.docs-theme .main-wrapper {
   width: 100%;
   padding: 0 16px;
