--- a/app/scss/04-organisms/_hellobar.scss
+++ b/app/scss/04-organisms/_hellobar.scss
@@ -12,6 +12,8 @@
     align-items: center;
     justify-content: center;
     gap: 8px;
+    position: relative;
+    z-index: 900;
 }
 
 .hellobar-container {
